# AI_Doctor_Assistant

./: README.md  app.py  config.py  cspell.json  pyproject.toml  requirements.txt
UI/: components.py  styles.py
core/: chains.py  llm.py  memory.py  prompts.py
data/: sample_symptoms.json
utils/: disclaimers.py  validators.py
