[project]
name = "ai-doctor-assistant"
version = "0.1.0"
description = "AI Doctor Assistant - basic health insights via LangChain + Google Gemini + Streamlit"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38.0",
    "langchain>=0.3.7",
    "langchain-google-genai>=2.0.4",
    "langchain-core>=0.3.15",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false